--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+n3rd3x3:
+  name: n3rd3x3
+  title: tsukimio creator
+  url: https://n3rd3x3.dev
+  image_url: https://github.com/n3rd3x3.png
